--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TERRA NUOVA Industrial Floor Coating Landing Page</title>
+    <title>Terra Nuova | NYC Epoxy & Polyurea Floor Coatings</title>
+    <meta name="description" content="Terra Nuova installs high-performance epoxy and polyurea flooring across NYC. Residential, commercial & industrial coatings. Free estimates.">
   </head>
   <body>
     <div id="root"></div>
