Update homepage meta title and description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terra Nuova | NYC Epoxy & Polyurea Floor Coatings</title>
-    <meta name="description" content="Terra Nuova installs high-performance epoxy and polyurea flooring across NYC. Residential, commercial & industrial coatings. Free estimates.">
+    <title>Terra Nuova | Epoxy Floor Coatings in NYC</title>
+    <meta name="description" content="Professional epoxy floor coatings in NYC by Terra Nuova. Durable, stylish floors for garages, basements, shops & more. Free estimates available.">
   </head>
   <body>
     <div id="root"></div>
