--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/logo/terra-nuova-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terra Nuova | Epoxy Floor Coatings in NYC</title>
+    <title>Terra Nuova: Concrete Floor Coatings in NYC</title>
     <meta name="description" content="Professional epoxy floor coatings in NYC by Terra Nuova. Durable, stylish floors for garages, basements, shops & more. Free estimates available.">
   </head>
   <body>
